...
  
  String barcode = 'Scan Something!';

  final _searchController = TextEditingController();
  final _gramsController = TextEditingController();

  String selectedTime = 'Morning';

  int selectedFoodIndex = -1;

  Color addButtonColor = Colors.blue;
  String addButtonText = 'Add';

  LocalDatabase db = LocalDatabase();

  late FoodService foodService;

  List<Product?> returnedProducts = [];
...
                    child: TextField(
                      controller: _searchController,
                      decoration: InputDecoration(
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.all(Radius.circular(0))
                        ),
                        hintText: 'Search',
                        hintStyle: TextStyle(color: Colors.grey[400])
                      ),
                    ),
                  ),
                  Column(
                    children: [
...
                        FilteringTextInputFormatter.digitsOnly
                      ],
                      decoration: InputDecoration(
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.all(Radius.circular(0))
                        ),
                        hintText: 'grams',
                        hintStyle: TextStyle(color: Colors.grey[400]),
                      ),
                      controller: _gramsController,
                      onChanged: (text) {
                        // trigger a rebuild for the purposes of the add valid checker
                        setState(() {});
...
                      items: [
                        DropdownMenuItem(
                          value: 'Morning',
                          child: Text('Morning'),
                        ),
                        DropdownMenuItem(
                          value: 'Afternoon',
                          child: Text('Afternoon'),
                        ),
                        DropdownMenuItem(
                          value: 'Evening',
                          child: Text('Evening'),
                        )
...

                  MaterialButton(
                      color: addButtonColor,
                      onPressed: () async {
                        if (addValid()) {
                          saveFood();
                          setState(() {addButtonColor=Colors.green;addButtonText='Added';});
                          Timer(Duration(seconds: 1), () {
                            if (this.mounted) {
                              setState(() {
                                addButtonColor = Colors.blue;
                                addButtonText = 'Add';
                              });
...
