...
        icon: Icon(Icons.list, key: Key('test1'),),
        label: 'Tracker',
        key: Key('test'),
    ),
    BottomNavigationBarItem(
        icon: Icon(Icons.settings),
        label: 'Preferences'
    ),
    BottomNavigationBarItem(
        icon: Icon(Icons.auto_graph),
        label: 'Graphs'
    ),
    BottomNavigationBarItem(
        icon: Icon(Icons.science),
        label: 'CoachPilot'
    )
  ];
...
