...
                    DropdownButton(
                        hint: Text(exercise),
                        value: exercise,
                        items: [
                          DropdownMenuItem(
                              value: 'RUN',
                              child: Text('Run')
                          ),
                          DropdownMenuItem(
                              value: 'WALK',
                              child: Text('Walk')
                          ),
                          DropdownMenuItem(
                              value: 'SWIM',
                              child: Text('Swim')
                          ),
                        ],
                        onChanged: (chosenExercise) {
                          setState(() {
                            exercise = chosenExercise!;
                          });
...
